<resources>
    <!--  Basic Strings  -->
    <string name="app_name">Securely</string>
    <string name="error">Something went wrong!</string>

    <!--  MainActivity  -->
    <string name="password_name_already_taken">Password name already taken</string>
    <string name="password_added_to_clipboard">%1$s added to clipboard</string>
    <string name="securely_hex">Securely:%1$s-%2$s-%3$s</string>
    <string name="password_deleted">%1$s has been deleted</string>
    <string name="password_edited">%1$s has been edited</string>
    <string name="password_added">%1$s has been added</string>

    <!--  EmptyFragment  -->
    <string name="list_is_empty">List is Empty</string>
    <string name="empty_hint">Click <b>+</b> button\nfor add new password</string>

    <!--  LoginActivity  -->
    <string name="welcome_to_securely">Welcome to Securely</string>
    <string name="enter_the_password_in_the_field">Enter the password to the field</string>
    <string name="create_new_password">Create new password\nTip: Use more than 4 numbers</string>
    <string name="all_passwords_deleted">All passwords have been deleted</string>
    <string name="invalid_password">Invalid password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_code_to_restore">Enter <b>0000</b> code to restore to default</string>
    <string name="restore_canceled">Restore was canceled\nEnter the password to the field</string>
    <string name="password_set">Password has been set</string>
    <string name="successful_login">Successful login</string>
    <string name="successful_restore">Successful restore\nEnter new password to the field</string>
    <string name="enter_password">Enter password</string>

    <!--  ConfirmFragment  -->
    <string name="change_password">Change password?</string>
    <string name="delete_all_passwords">Delete all passwords?</string>
    <string name="delete_password">Delete password?</string>

    <!--  PasswordFragment  -->
    <string name="password_name">Password Name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="description_optional">Description (Optional)</string>
    <string name="add_password">Add password</string>
    <string name="edit_password">Edit password</string>
    <string name="you_have_empty_fields">You have empty fields</string>

    <!--  SettingsFragment  -->
    <string name="settings">Settings</string>
    <string name="show">Show</string>
    <string name="symbols">Symbols</string>
    <string name="def">DEFAULT</string>
    <string name="delete">Delete</string>
    <string name="encrypt">Encrypt</string>
    <string name="settings_saved">Settings have saved</string>
    <string name="securely_info">Securely / %1$s</string>

    <!--  ScannerActivity  -->
    <string name="find_and_scan">Find and Scan SecurelyQR</string>

    <!--  UpdateFragment  -->
    <string name="update">Update</string>
    <string name="version_current_and_new">Current - %1$s / New - %2$s</string>

    <!--  Website Link  -->
    <string name="website">https://merive.herokuapp.com/Securely/Download/</string>

    <!--  TODO  -->
    <string name="todo">TODO</string>
</resources>