<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".NewPasswordActivity">

    <com.merive.securepass.TypingTextView
        android:id="@+id/add_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/share_tech_mono"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998" />

    <EditText
        android:id="@+id/PasswordNameEditView"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/share_tech_mono"
        android:hint="@string/password_name"
        android:inputType="textPersonName"
        android:textColor="@color/green"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/loginEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/passwordEdit"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/share_tech_mono"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/green"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.825"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_button"
        android:contentDescription="@string/todo"
        android:padding="4dp"
        app:layout_constraintBottom_toTopOf="@+id/descriptionEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEdit"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_popup_sync"
        app:tint="@color/green"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/descriptionEdit"
        android:layout_width="280dp"
        android:layout_height="100dp"

        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/share_tech_mono"
        android:gravity="start|top"
        android:hint="@string/description_optional"
        android:inputType="textMultiLine"
        android:maxLength="128"
        android:textAlignment="viewStart"
        android:textColor="@color/green"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEdit"
        app:layout_constraintVertical_bias="0.046" />

    <EditText
        android:id="@+id/loginEdit"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginBottom="19dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/share_tech_mono"
        android:hint="@string/login"
        android:inputType="textEmailAddress"
        android:textColor="@color/green"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/share_tech_mono"
        android:onClick="add"

        android:text="@string/add"

        android:textAllCaps="false"
        android:textColor="@color/green"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.844" />

</androidx.constraintlayout.widget.ConstraintLayout>