<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350sp"
    android:layout_height="475sp"
    android:layout_gravity="center"
    android:layout_margin="12sp"
    android:background="@xml/background"
    android:minWidth="350sp"
    android:minHeight="475sp"
    android:visibility="visible">

    <com.merive.securepass.elements.TypingTextView
        android:id="@+id/password_title"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12sp"
        android:layout_marginRight="12sp"
        android:fontFamily="@font/share_tech_mono"
        android:padding="6sp"
        android:text=""
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="250sp"
        android:layout_height="48sp"
        android:background="@xml/background_light"
        android:ems="10"
        android:fontFamily="@font/share_tech_mono"
        android:gravity="fill_horizontal|center_vertical"
        android:hint="@string/password_name"
        android:inputType="text"
        android:maxLength="32"
        android:paddingLeft="16sp"
        android:paddingTop="12sp"
        android:paddingRight="16sp"
        android:paddingBottom="12sp"
        android:textColor="@color/green"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20" />

    <EditText
        android:id="@+id/login_edit"
        android:layout_width="250sp"
        android:layout_height="48sp"
        android:background="@xml/background_light"
        android:digits="abcdefghijklmnopqrstuvwxyz0123448789ABCDEFGHIJKLMNOPQRSTUVWXYZ!#$%&amp;'@()*+^`-_./:;&lt;&gt;=?,\[]{}|~"
        android:ems="10"
        android:fontFamily="@font/share_tech_mono"
        android:gravity="fill_horizontal|center_vertical"
        android:hint="@string/login"
        android:inputType="textEmailAddress"
        android:paddingLeft="16sp"
        android:paddingTop="12sp"
        android:paddingRight="16sp"
        android:paddingBottom="12sp"
        android:singleLine="true"
        android:textColor="@color/green"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <EditText
        android:id="@+id/password_edit"
        android:layout_width="190sp"
        android:layout_height="48sp"
        android:background="@xml/background_light"
        android:digits="abcdefghijklmnopqrstuvwxyz0123448789ABCDEFGHIJKLMNOPQRSTUVWXYZ!#$%&amp;'@()*+^`-_./:;&lt;&gt;=?,\[]{}|~"
        android:ems="10"
        android:fontFamily="@font/share_tech_mono"
        android:gravity="fill_horizontal|center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="16sp"
        android:paddingTop="12sp"
        android:paddingRight="16sp"
        android:paddingBottom="12sp"
        android:singleLine="true"
        android:textColor="@color/green"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.318"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/generate_password_button"
        android:layout_width="46sp"
        android:layout_height="46sp"
        android:background="@xml/background_light"
        android:contentDescription="@string/todo"
        android:padding="8sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.50"
        app:srcCompat="@drawable/generate"
        app:tint="@color/green" />

    <EditText
        android:id="@+id/description_edit"
        android:layout_width="250sp"
        android:layout_height="96sp"
        android:background="@xml/background_light"
        android:ems="10"
        android:fontFamily="@font/share_tech_mono"
        android:gravity="fill_horizontal"
        android:hint="@string/description_optional"
        android:inputType="textMultiLine"
        android:maxLength="128"
        android:paddingLeft="16sp"
        android:paddingTop="12sp"
        android:paddingRight="16sp"
        android:paddingBottom="12sp"
        android:textColor="@color/green"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74" />

    <View
        android:id="@+id/password_bar_background"
        android:layout_width="0sp"
        android:layout_height="58sp"
        android:layout_marginStart="42sp"
        android:layout_marginEnd="42sp"
        android:background="@xml/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

    <ImageView
        android:id="@+id/password_delete_button"
        android:layout_width="48sp"
        android:layout_height="48sp"
        android:background="@xml/background_light"
        android:contentDescription="@string/todo"
        android:padding="12sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/password_bar_background"
        app:layout_constraintEnd_toEndOf="@+id/password_bar_background"
        app:layout_constraintStart_toStartOf="@+id/password_bar_background"
        app:layout_constraintTop_toTopOf="@+id/password_bar_background"
        app:srcCompat="@drawable/delete"
        app:tint="@color/green" />

    <ImageView
        android:id="@+id/password_cancel_button"
        android:layout_width="48sp"
        android:layout_height="48sp"
        android:background="@xml/background_light"
        android:contentDescription="@string/todo"
        android:padding="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/password_bar_background"
        app:layout_constraintEnd_toStartOf="@+id/password_delete_button"
        app:layout_constraintStart_toStartOf="@+id/password_bar_background"
        app:layout_constraintTop_toTopOf="@+id/password_bar_background"
        app:srcCompat="@drawable/cancel"
        app:tint="@color/green" />

    <ImageView
        android:id="@+id/password_save_button"
        android:layout_width="48sp"
        android:layout_height="48sp"
        android:background="@xml/background_light"
        android:contentDescription="@string/todo"
        android:padding="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/password_bar_background"
        app:layout_constraintEnd_toEndOf="@+id/password_bar_background"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toEndOf="@+id/password_delete_button"
        app:layout_constraintTop_toTopOf="@+id/password_bar_background"
        app:srcCompat="@drawable/save"
        app:tint="@color/green" />

</androidx.constraintlayout.widget.ConstraintLayout>